--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT = 5000
 
+#Database
 DB_URL="mongodb://localhost:27017/start-project"
+
+#Jwt
+JWT_SECRET_KEY="eyJhbGciOiJIUzI1NiJ9.ey"
+JWT_EXPIRES_IN="7d"
