--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ DB_URL="mongodb://localhost:27017/start-project"
 JWT_SECRET_KEY="eyJhbGciOiJIUzI1NiJ9.ey"
 JWT_EXPIRES_IN="7d"
 
+JWT_TEMPORARY_KEY="eyJhbGciOiJIUzI1NiJ9.ey"
+JWT_TEMPORARY_EXPIRES_IN="3m"
+
 #email
 
 EMAIL_USER="baseapi7@gmail.com"
